tests/fixtures/invalid/pow_float_str_str.py
# Cannot call pow() with Float, Str, Str
x = pow(1.0, "hello", "hello")
